<resources>
    <string name="app_name" translatable="false">Filmoteca</string>
    <string name="using_mode">Using mode:</string>
    <string name="created_by">Created by Sergio Ariza Amat</string>
    <string name="about_image_description">Imagen usuario</string>
    <string name="go_to_website">Go to website</string>
    <string name="get_support">Get support</string>
    <string name="back">Back</string>
    <string name="not_implemented" translatable="false">Not implemented yet</string>
    <string name="no_app_available">No application available to perform this action</string>
    <string name="film_a">Star Wars: Episode IV - A New Hope</string>
    <string name="film_b">The Lord of the Rings: The Fellowship of the Ring</string>
    <string name="about">About</string>
    <string name="film_data">Film data</string>
    <string name="related_film">View Related film</string>
    <string name="edit_film">Edit film</string>
    <string name="edit">Editing film ...</string>
    <string name="back_to_main">Back to main</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="film_a_title">Star Wars: Episode IV - A New Hope</string>
    <string name="film_b_title">The Lord of the Rings: The Fellowship of the Ring</string>
    <string name="related_film_title">Related film</string>
    <string name="film_edited">%1$s (edited)</string>
    <string name="gen_and_format">%1$s, %2$s</string>
    <string name="film_poster">Film poster</string>
    <string name="view_on_imdb">View on IMDb</string>
    <string name="director">Director: %1$s</string>
    <string name="year">Year: %1$d</string>
    <string name="take_photo">Take photo</string>
    <string name="select_image">Select image</string>
    <string name="field_title">Title</string>
    <string name="field_director">Director</string>
    <string name="field_year">Year</string>
    <string name="field_genre">Genre</string>
    <string name="field_format">Format</string>
    <string name="imdb_url">IMDb url</string>
    <string name="comments">Notes</string>
    <string name="no_camera_app">No camera app found on this device</string>



</resources>
